GH 3830 - fix person/multi-person overflow (#4063)

--- a/webapp/src/properties/multiperson/multiperson.scss
+++ b/webapp/src/properties/multiperson/multiperson.scss
@@ -1,6 +1,4 @@
 .MultiPerson {
-    margin-right: 20px;
-    min-width: 180px;
     display: flex;
     align-items: center;
     border-radius: 4px;
